--- a/app/views/LogMessages/list.html
+++ b/app/views/LogMessages/list.html
@@ -1,6 +1,8 @@
 #{extends 'main.html' /}
 #{set title:'swlogger messages' /}
 
+<p> Currently everyone's messages are displayed in this list,
+    not just your messages. </p>
 <div id="crudList" class="${type.name}">
 	
 	<h2 id="crudListTitle">&{'crud.list.title', type.name}</h2>
