--- a/app/views/Projects/blank.html
+++ b/app/views/Projects/blank.html
@@ -2,18 +2,25 @@
 #{set title:'swlogger projects' /}
 
 <div id="crudBlank" class="${type.name}">
-	
-	<h2 id="crudBlankTitle">&{'crud.blank.title', type.modelName}</h2>
-	
-	<div class="objectForm">
+
+    <h2 id="crudBlankTitle">&{'crud.blank.title', type.modelName}</h2>
+
+    <div class="objectForm">
 	#{form action:@createProj(), enctype:'multipart/form-data'}
-		#{crud.form fields:['title','description']/}
-		<p class="crudButtons">
-			<input type="submit" name="_save" value="&{'crud.save', type.modelName}" />
-			<input type="submit" name="_saveAndContinue" value="&{'crud.saveAndContinue', type.modelName}" />
-			<input type="submit" name="_saveAndAddAnother" value="&{'crud.saveAndAddAnother', type.modelName}" />
-		</p>
+        <p>
+            <label for="title">title </label>
+            <input type="text" name="title" id="title" size="50"  />
+        </p>
+        <p>
+            <label for="title">description </label>
+            <input type="text" name="description" id="description" size="50"   />
+        </p>
+        <p class="crudButtons">
+            <input type="submit" name="_save" value="&{'crud.save', type.modelName}" />
+            <input type="submit" name="_saveAndContinue" value="&{'crud.saveAndContinue', type.modelName}" />
+            <input type="submit" name="_saveAndAddAnother" value="&{'crud.saveAndAddAnother', type.modelName}" />
+        </p>
 	#{/form}
-	</div>
+    </div>
 
 </div>
