--- a/app/views/Projects/list.html
+++ b/app/views/Projects/list.html
@@ -1,6 +1,8 @@
 #{extends 'main.html' /}
 #{set title:'swlogger projects' /}
 
+<p> Currently everyone's projects are displayed in this list,
+    not just your projects. </p>
 <div id="crudList" class="${type.name}">
 	
 	<h2 id="crudListTitle">&{'crud.list.title', type.name}</h2>
