--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,16 +9,19 @@
     </head>
     <body>
         <div id="header">
-          <h1><a href="@{Application.index()}">swlogger</a></h1>
-            <h2>A Central Place for all your Software Logs</h2>
             <div id="login_div">
                 #{if session.get("user_id")}
-                    <a href="@{Application.logout}">Logout</a>  <!-- ${session.get("user_id")} -->
+                <a href="@{Application.logout}">Logout</a>  <!-- ${session.get("user_id")} -->
                 #{/if}
                 #{else}
-                    <a href="@{Application.authenticate}"><img src="http://l.yimg.com/a/i/reg/openid/buttons/15.png" /></a>
+                <a href="@{Application.authenticate}"><img src="http://l.yimg.com/a/i/reg/openid/buttons/15.png" /></a>
                 #{/else}
             </div>
+            <div id="title_div">
+                <h1><a href="@{Application.index()}">swlogger</a></h1>
+                <h2>A Single Place for all your Software Logs</h2>
+            </div>
+
         </div>
         <div id="menu">
             <ul>
@@ -46,19 +49,21 @@
                 </p>
                 #{/form}
         -->
+        <!--
         #{form @Projects.createProj()}
-                <p>
-                    <label for="author">Title </label>
-                    <input type="text" name="title" id="title" />
-                </p>
-                <p>
-                    <label for="author">Description </label>
-                    <textarea name="description" id="description" ></textarea>
-                </p>
-                <p>
-                    <input type="submit" value="Submit your comment" />
-                </p>
-                #{/form}
+        <p>
+            <label for="author">Title </label>
+            <input type="text" name="title" id="title" />
+        </p>
+        <p>
+            <label for="author">Description </label>
+            <textarea name="description" id="description" ></textarea>
+        </p>
+        <p>
+            <input type="submit" value="Submit your comment" />
+        </p>
+        #{/form}
+        -->
         <div id="footer">
             <p class="legal">&copy;2009 All Rights Reserved.</p>
             <p class="credit">Design Modified from <a target="new" href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
