updating some login

--- a/app/views/Application/about.html
+++ b/app/views/Application/about.html
@@ -5,4 +5,5 @@
 <p>This is the only place you will need for all your software logs.</p>
 
 <h2>About Us</h2>
-<p>This project is hosted at github. </p>
+<p>This project is hosted at
+    <a href="http://github.com/GooF/Software-Logger">github</a>.  </p>
