--- a/app/views/Application/features.html
+++ b/app/views/Application/features.html
@@ -5,6 +5,6 @@
 <ol>
     <li>Support for different projects</li>
     <li>Support for different logging levels</li>
-    <li>Messages only visible to you.</li>
+    <li>Messages only visible to you. - coming soon!</li>
     <li>REST API - coming soon!</li>
 </ol>
