--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -5,3 +5,8 @@
 <h2>Welcome to SwLogger!</h2>
 
 <p> This is a very early ALPHA release. </p>
+
+<p> Many of the features are not available yet </p>
+
+<p> Feel Free to login and try it out. At this point the data has no
+    guarantee or lifetime.</p>
