--- a/app/views/main.html
+++ b/app/views/main.html
@@ -68,5 +68,18 @@
             <p class="legal">&copy;2009 All Rights Reserved.</p>
             <p class="credit">Design Modified from <a target="new" href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
         </div>
+        <script type="text/javascript">
+
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-8827967-3']);
+            _gaq.push(['_trackPageview']);
+
+            (function() {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            })();
+
+        </script>
     </body>
 </html>
